9-Registry/1-namespace-registry.yaml
---
apiVersion: v1
  kind: Namespace
metadata:
  name: registry
  labels:
    name: registry
