9-Registry/3-registry-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-registry
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2.7.1
          ports:
          - name: http
            containerPort: 5000
          volumeMounts:
          - name: image-store
            mountPath: "/var/lib/registry"
      nodeSelector:
        disktype: ssd
      volumes:
      - name: image-store
        persistentVolumeClaim:
          claimName: docker-registry-pvc
