9-Registry/4-registry-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: docker-registry
  namespace: registry
  labels:
    app: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
  - name: http
    port: 5000
