9-Registry/5-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-docker-ingress
  namespace: registry
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: docker-registry.internal.boudboud.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-registry
          servicePort: 5000
